# Lisien

./: .buildinfo  .buildinfo.bak  .gitignore  .gitmodules  CHANGES.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.foot  Dockerfile.head  README.md  README.rst  attrs.patch  buildozer.spec  butler.py  check_version.py  compare_arrays.js  conf.py  convert_changes_to_rst.py  core.py  eqversion.py  fdl-1.3.rst  filter_kivy_logs.py  find_ramdisk.py  gen_dockerfile.py  genindex.html  index.html  index.rst  kivy.patch  lisien-windows.tar.xz  lisien-windows.tar.xz.REMOVED.git-id  main.py  make-docs.sh  manual.html  manual.rst  mini-coi-fd.js  objects.inv  pull_kivy_logs.py  py-modindex.html  pycharm_tox.ini  pytest.ini  (+14 more)
elide/: index.html  index.rst  pyproject.toml  tox.ini
elide/elide/: __init__.py  app.py  boardscatter.py  boardview.py  calendar.py  card.py  charmenu.py  charsview.py  dialog.py  dummy.py  elide.ini  elide.kv  game.py  gen.py  imagestackproxy.py  kwlist.py  logview.py  mainmenu.py  menu.py  pallet.py  pawnspot.py  roll.py  rulebooks.py  rulesview.py  screen.py  spritebuilder.py  statcfg.py  stepper.py  stores.kv  stores.py  timestream.py  util.py
elide/elide/examples/: sugarscape_immediate_growback.py
elide/elide/graph/: arrow.py  board.py
elide/elide/grid/: board.py
elide/elide/tests/: conftest.py  test_character_switcher.py  test_graph_board.py  test_graphboard.py  test_gridboard.py  test_main_menu.py  test_python_editor.py  test_resources.py  test_rule_builder.py  test_screen.py  test_strings_editor.py  util.py
lisien/: design.html  design.rst  index.html  index.rst  package.json  pyproject.toml  test_requirements.txt  tox.ini  tox_all.ini  tox_big.ini  tox_college_slow.ini  tox_pqdb.ini  tox_prerelease_parquetdb.ini  tox_pydb.ini  tox_slow.ini  tox_sqlite.ini  tox_terp.ini
lisien/lisien/: alchemy.py  android_service.py  cache.py  character.py  collections.py  db.py  engine.py  enum.py  exc.py  export.py  exporter.py  facade.py  futures.py  graph.py  handle.py  import.py  importer.py  node.py  portal.py  pqdb.py  proxy.py  query.py  rule.py  sql.py  types.py  typing.py  util.py  window.py  world.rnc  world.rng  wrap.py  xcollections.py
lisien/lisien/allegedb/: cache.py  core.py  exc.py  query.py  typing.py  util.py  window.py
lisien/lisien/db/: __init__.py  pqdb.py  sql.py
lisien/lisien/examples/: college.py  export_examples.py  kobold.py  pathfind.py  polygons.py  sickle.py  wolfsheep.py
lisien/lisien/proxy/: __init__.py  __main__.py  abc.py  character.py  engine.py  handle.py  thread.py  (+5 more)
(+355 files in other folders)
